assgn1/obj/y.output
Nonterminals useless in grammar

    void
    char


Terminals unused in grammar

    ERROR
    ILLEGAL_TOK
    KWD_STRING
    OPER_MOD
    OPER_INC
    OPER_DEC
    OPER_AND
    OPER_NOT
    OPER_AT
    OPER_OR


Rules useless in grammar

   63 char: CHARCONST


State 34 conflicts: 1 shift/reduce
State 40 conflicts: 5 shift/reduce
State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpecifier ID LPAREN INTCONST RPAREN
    7        | typeSpecifier ID SEMICLN

    8 typeSpecifier: KWD_INT
    9              | KWD_CHAR
   10              | KWD_VOID

   11 funDecl: typeSpecifier ID LPAREN formalDeclList RPAREN funBody
   12        | typeSpecifier ID LPAREN RPAREN funBody

   13 formalDeclList: formalDecl
   14               | formalDecl COMMA formalDeclList

   15 formalDecl: typeSpecifier ID
   16           | typeSpecifier ID LSQ_BRKT RSQ_BRKT

   17 funBody: LCRLY_BRKT localDeclList statementList RCRLY_BRKT

   18 localDeclList: %empty
   19              | varDecl localDeclList

   20 statementList: %empty
   21              | statement statementList

   22 statement: compoundStmt
   23          | assignStmt
   24          | condStmt
   25          | loopStmt
   26          | returnStmt

   27 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT

   28 assignStmt: var OPER_ASGN expression
   29           | expression

   30 condStmt: KWD_IF LPAREN expression RPAREN statement
   31         | KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN statement

   33 returnStmt: KWD_RETURN
   34           | KWD_RETURN expression

   35 expression: addExpr
   36           | expression relop addExpr

   37 var: ID
   38    | ID LSQ_BRKT addExpr RSQ_BRKT

   39 relop: OPER_LTE
   40      | OPER_LT
   41      | OPER_GT
   42      | OPER_GTE
   43      | OPER_EQ
   44      | OPER_NEQ

   45 addExpr: term
   46        | addExpr addop term

   47 addop: OPER_ADD
   48      | OPER_SUB

   49 term: factor
   50     | term mulop factor

   51 mulop: OPER_MUL
   52      | OPER_DIV

   53 factor: LPAREN expression RPAREN
   54       | var
   55       | funcCallExpr
   56       | INTCONST
   57       | CHARCONST
   58       | STRCONST

   59 funcCallExpr: ID LPAREN argList RPAREN
   60             | ID LPAREN RPAREN

   61 argList: expression
   62        | argList COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <strval> (258) 6 7 11 12 15 16 37 38 59 60
    INTCONST <value> (259) 6 56
    CHARCONST <strval> (260) 57
    STRCONST <strval> (261) 58
    ERROR (262)
    ILLEGAL_TOK (263)
    KWD_IF (264) 30 31
    KWD_ELSE (265) 31
    KWD_WHILE (266) 32
    KWD_INT (267) 8
    KWD_STRING (268)
    KWD_CHAR (269) 9
    KWD_RETURN (270) 33 34
    KWD_VOID (271) 10
    OPER_ADD (272) 47
    OPER_SUB (273) 48
    OPER_MUL (274) 51
    OPER_DIV (275) 52
    OPER_LT (276) 40
    OPER_GT (277) 41
    OPER_GTE (278) 42
    OPER_LTE (279) 39
    OPER_EQ (280) 43
    OPER_NEQ (281) 44
    OPER_ASGN (282) 28
    OPER_MOD (283)
    OPER_INC (284)
    OPER_DEC (285)
    OPER_AND (286)
    OPER_NOT (287)
    OPER_AT (288)
    OPER_OR (289)
    LSQ_BRKT (290) 16 38
    RSQ_BRKT (291) 16 38
    LCRLY_BRKT (292) 17 27
    RCRLY_BRKT (293) 17 27
    LPAREN (294) 6 11 12 30 31 32 53 59 60
    RPAREN (295) 6 11 12 30 31 32 53 59 60
    COMMA (296) 14 62
    SEMICLN (297) 7


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <node> (44)
        on left: 1
        on right: 0
    declList <node> (45)
        on left: 2 3
        on right: 1 3
    decl <node> (46)
        on left: 4 5
        on right: 2 3
    varDecl <node> (47)
        on left: 6 7
        on right: 4 19
    typeSpecifier <node> (48)
        on left: 8 9 10
        on right: 6 7 11 12 15 16
    funDecl <node> (49)
        on left: 11 12
        on right: 5
    formalDeclList <node> (50)
        on left: 13 14
        on right: 11 14
    formalDecl <node> (51)
        on left: 15 16
        on right: 13 14
    funBody <node> (52)
        on left: 17
        on right: 11 12
    localDeclList <node> (53)
        on left: 18 19
        on right: 17 19
    statementList <node> (54)
        on left: 20 21
        on right: 17 21 27
    statement <node> (55)
        on left: 22 23 24 25 26
        on right: 21 30 31 32
    compoundStmt <node> (56)
        on left: 27
        on right: 22
    assignStmt <node> (57)
        on left: 28 29
        on right: 23
    condStmt <node> (58)
        on left: 30 31
        on right: 24
    loopStmt <node> (59)
        on left: 32
        on right: 25
    returnStmt <node> (60)
        on left: 33 34
        on right: 26
    expression <node> (61)
        on left: 35 36
        on right: 28 29 30 31 32 34 36 53 61 62
    var <node> (62)
        on left: 37 38
        on right: 28 54
    relop <node> (63)
        on left: 39 40 41 42 43 44
        on right: 36
    addExpr <node> (64)
        on left: 45 46
        on right: 35 36 38 46
    addop <node> (65)
        on left: 47 48
        on right: 46
    term <node> (66)
        on left: 49 50
        on right: 45 46 50
    mulop <node> (67)
        on left: 51 52
        on right: 50
    factor <node> (68)
        on left: 53 54 55 56 57 58
        on right: 49 50
    funcCallExpr <node> (69)
        on left: 59 60
        on right: 55
    argList <node> (70)
        on left: 61 62
        on right: 59 62


State 0

    0 $accept: • program $end

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    program        go to state 4
    declList       go to state 5
    decl           go to state 6
    varDecl        go to state 7
    typeSpecifier  go to state 8
    funDecl        go to state 9


State 1

    8 typeSpecifier: KWD_INT •

    $default  reduce using rule 8 (typeSpecifier)


State 2

    9 typeSpecifier: KWD_CHAR •

    $default  reduce using rule 9 (typeSpecifier)


State 3

   10 typeSpecifier: KWD_VOID •

    $default  reduce using rule 10 (typeSpecifier)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 10


State 5

    1 program: declList •
    3 declList: declList • decl

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl           go to state 11
    varDecl        go to state 7
    typeSpecifier  go to state 8
    funDecl        go to state 9


State 6

    2 declList: decl •

    $default  reduce using rule 2 (declList)


State 7

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 8

    6 varDecl: typeSpecifier • ID LPAREN INTCONST RPAREN
    7        | typeSpecifier • ID SEMICLN
   11 funDecl: typeSpecifier • ID LPAREN formalDeclList RPAREN funBody
   12        | typeSpecifier • ID LPAREN RPAREN funBody

    ID  shift, and go to state 12


State 9

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 10

    0 $accept: program $end •

    $default  accept


State 11

    3 declList: declList decl •

    $default  reduce using rule 3 (declList)


State 12

    6 varDecl: typeSpecifier ID • LPAREN INTCONST RPAREN
    7        | typeSpecifier ID • SEMICLN
   11 funDecl: typeSpecifier ID • LPAREN formalDeclList RPAREN funBody
   12        | typeSpecifier ID • LPAREN RPAREN funBody

    LPAREN   shift, and go to state 13
    SEMICLN  shift, and go to state 14


State 13

    6 varDecl: typeSpecifier ID LPAREN • INTCONST RPAREN
   11 funDecl: typeSpecifier ID LPAREN • formalDeclList RPAREN funBody
   12        | typeSpecifier ID LPAREN • RPAREN funBody

    INTCONST  shift, and go to state 15
    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3
    RPAREN    shift, and go to state 16

    typeSpecifier   go to state 17
    formalDeclList  go to state 18
    formalDecl      go to state 19


State 14

    7 varDecl: typeSpecifier ID SEMICLN •

    $default  reduce using rule 7 (varDecl)


State 15

    6 varDecl: typeSpecifier ID LPAREN INTCONST • RPAREN

    RPAREN  shift, and go to state 20


State 16

   12 funDecl: typeSpecifier ID LPAREN RPAREN • funBody

    LCRLY_BRKT  shift, and go to state 21

    funBody  go to state 22


State 17

   15 formalDecl: typeSpecifier • ID
   16           | typeSpecifier • ID LSQ_BRKT RSQ_BRKT

    ID  shift, and go to state 23


State 18

   11 funDecl: typeSpecifier ID LPAREN formalDeclList • RPAREN funBody

    RPAREN  shift, and go to state 24


State 19

   13 formalDeclList: formalDecl •
   14               | formalDecl • COMMA formalDeclList

    COMMA  shift, and go to state 25

    $default  reduce using rule 13 (formalDeclList)


State 20

    6 varDecl: typeSpecifier ID LPAREN INTCONST RPAREN •

    $default  reduce using rule 6 (varDecl)


State 21

   17 funBody: LCRLY_BRKT • localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 18 (localDeclList)

    varDecl        go to state 26
    typeSpecifier  go to state 27
    localDeclList  go to state 28


State 22

   12 funDecl: typeSpecifier ID LPAREN RPAREN funBody •

    $default  reduce using rule 12 (funDecl)


State 23

   15 formalDecl: typeSpecifier ID •
   16           | typeSpecifier ID • LSQ_BRKT RSQ_BRKT

    LSQ_BRKT  shift, and go to state 29

    $default  reduce using rule 15 (formalDecl)


State 24

   11 funDecl: typeSpecifier ID LPAREN formalDeclList RPAREN • funBody

    LCRLY_BRKT  shift, and go to state 21

    funBody  go to state 30


State 25

   14 formalDeclList: formalDecl COMMA • formalDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    typeSpecifier   go to state 17
    formalDeclList  go to state 31
    formalDecl      go to state 19


State 26

   19 localDeclList: varDecl • localDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 18 (localDeclList)

    varDecl        go to state 26
    typeSpecifier  go to state 27
    localDeclList  go to state 32


State 27

    6 varDecl: typeSpecifier • ID LPAREN INTCONST RPAREN
    7        | typeSpecifier • ID SEMICLN

    ID  shift, and go to state 33


State 28

   17 funBody: LCRLY_BRKT localDeclList • statementList RCRLY_BRKT

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    $default  reduce using rule 20 (statementList)

    statementList  go to state 43
    statement      go to state 44
    compoundStmt   go to state 45
    assignStmt     go to state 46
    condStmt       go to state 47
    loopStmt       go to state 48
    returnStmt     go to state 49
    expression     go to state 50
    var            go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    funcCallExpr   go to state 55


State 29

   16 formalDecl: typeSpecifier ID LSQ_BRKT • RSQ_BRKT

    RSQ_BRKT  shift, and go to state 56


State 30

   11 funDecl: typeSpecifier ID LPAREN formalDeclList RPAREN funBody •

    $default  reduce using rule 11 (funDecl)


State 31

   14 formalDeclList: formalDecl COMMA formalDeclList •

    $default  reduce using rule 14 (formalDeclList)


State 32

   19 localDeclList: varDecl localDeclList •

    $default  reduce using rule 19 (localDeclList)


State 33

    6 varDecl: typeSpecifier ID • LPAREN INTCONST RPAREN
    7        | typeSpecifier ID • SEMICLN

    LPAREN   shift, and go to state 57
    SEMICLN  shift, and go to state 14


State 34

   37 var: ID •
   38    | ID • LSQ_BRKT addExpr RSQ_BRKT
   59 funcCallExpr: ID • LPAREN argList RPAREN
   60             | ID • LPAREN RPAREN

    LSQ_BRKT  shift, and go to state 58
    LPAREN    shift, and go to state 59

    LPAREN    [reduce using rule 37 (var)]
    $default  reduce using rule 37 (var)


State 35

   56 factor: INTCONST •

    $default  reduce using rule 56 (factor)


State 36

   57 factor: CHARCONST •

    $default  reduce using rule 57 (factor)


State 37

   58 factor: STRCONST •

    $default  reduce using rule 58 (factor)


State 38

   30 condStmt: KWD_IF • LPAREN expression RPAREN statement
   31         | KWD_IF • LPAREN expression RPAREN statement KWD_ELSE statement

    LPAREN  shift, and go to state 60


State 39

   32 loopStmt: KWD_WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 61


State 40

   33 returnStmt: KWD_RETURN •
   34           | KWD_RETURN • expression

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    ID         [reduce using rule 33 (returnStmt)]
    INTCONST   [reduce using rule 33 (returnStmt)]
    CHARCONST  [reduce using rule 33 (returnStmt)]
    STRCONST   [reduce using rule 33 (returnStmt)]
    LPAREN     [reduce using rule 33 (returnStmt)]
    $default   reduce using rule 33 (returnStmt)

    expression    go to state 62
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 41

   27 compoundStmt: LCRLY_BRKT • statementList RCRLY_BRKT

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    $default  reduce using rule 20 (statementList)

    statementList  go to state 64
    statement      go to state 44
    compoundStmt   go to state 45
    assignStmt     go to state 46
    condStmt       go to state 47
    loopStmt       go to state 48
    returnStmt     go to state 49
    expression     go to state 50
    var            go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    funcCallExpr   go to state 55


State 42

   53 factor: LPAREN • expression RPAREN

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    expression    go to state 65
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 43

   17 funBody: LCRLY_BRKT localDeclList statementList • RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 66


State 44

   21 statementList: statement • statementList

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    $default  reduce using rule 20 (statementList)

    statementList  go to state 67
    statement      go to state 44
    compoundStmt   go to state 45
    assignStmt     go to state 46
    condStmt       go to state 47
    loopStmt       go to state 48
    returnStmt     go to state 49
    expression     go to state 50
    var            go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    funcCallExpr   go to state 55


State 45

   22 statement: compoundStmt •

    $default  reduce using rule 22 (statement)


State 46

   23 statement: assignStmt •

    $default  reduce using rule 23 (statement)


State 47

   24 statement: condStmt •

    $default  reduce using rule 24 (statement)


State 48

   25 statement: loopStmt •

    $default  reduce using rule 25 (statement)


State 49

   26 statement: returnStmt •

    $default  reduce using rule 26 (statement)


State 50

   29 assignStmt: expression •
   36 expression: expression • relop addExpr

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73

    $default  reduce using rule 29 (assignStmt)

    relop  go to state 74


State 51

   28 assignStmt: var • OPER_ASGN expression
   54 factor: var •

    OPER_ASGN  shift, and go to state 75

    $default  reduce using rule 54 (factor)


State 52

   35 expression: addExpr •
   46 addExpr: addExpr • addop term

    OPER_ADD  shift, and go to state 76
    OPER_SUB  shift, and go to state 77

    $default  reduce using rule 35 (expression)

    addop  go to state 78


State 53

   45 addExpr: term •
   50 term: term • mulop factor

    OPER_MUL  shift, and go to state 79
    OPER_DIV  shift, and go to state 80

    $default  reduce using rule 45 (addExpr)

    mulop  go to state 81


State 54

   49 term: factor •

    $default  reduce using rule 49 (term)


State 55

   55 factor: funcCallExpr •

    $default  reduce using rule 55 (factor)


State 56

   16 formalDecl: typeSpecifier ID LSQ_BRKT RSQ_BRKT •

    $default  reduce using rule 16 (formalDecl)


State 57

    6 varDecl: typeSpecifier ID LPAREN • INTCONST RPAREN

    INTCONST  shift, and go to state 15


State 58

   38 var: ID LSQ_BRKT • addExpr RSQ_BRKT

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    var           go to state 63
    addExpr       go to state 82
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 59

   59 funcCallExpr: ID LPAREN • argList RPAREN
   60             | ID LPAREN • RPAREN

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42
    RPAREN     shift, and go to state 83

    expression    go to state 84
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55
    argList       go to state 85


State 60

   30 condStmt: KWD_IF LPAREN • expression RPAREN statement
   31         | KWD_IF LPAREN • expression RPAREN statement KWD_ELSE statement

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    expression    go to state 86
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 61

   32 loopStmt: KWD_WHILE LPAREN • expression RPAREN statement

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    expression    go to state 87
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 62

   34 returnStmt: KWD_RETURN expression •
   36 expression: expression • relop addExpr

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73

    $default  reduce using rule 34 (returnStmt)

    relop  go to state 74


State 63

   54 factor: var •

    $default  reduce using rule 54 (factor)


State 64

   27 compoundStmt: LCRLY_BRKT statementList • RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 88


State 65

   36 expression: expression • relop addExpr
   53 factor: LPAREN expression • RPAREN

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73
    RPAREN    shift, and go to state 89

    relop  go to state 74


State 66

   17 funBody: LCRLY_BRKT localDeclList statementList RCRLY_BRKT •

    $default  reduce using rule 17 (funBody)


State 67

   21 statementList: statement statementList •

    $default  reduce using rule 21 (statementList)


State 68

   40 relop: OPER_LT •

    $default  reduce using rule 40 (relop)


State 69

   41 relop: OPER_GT •

    $default  reduce using rule 41 (relop)


State 70

   42 relop: OPER_GTE •

    $default  reduce using rule 42 (relop)


State 71

   39 relop: OPER_LTE •

    $default  reduce using rule 39 (relop)


State 72

   43 relop: OPER_EQ •

    $default  reduce using rule 43 (relop)


State 73

   44 relop: OPER_NEQ •

    $default  reduce using rule 44 (relop)


State 74

   36 expression: expression relop • addExpr

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    var           go to state 63
    addExpr       go to state 90
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 75

   28 assignStmt: var OPER_ASGN • expression

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    expression    go to state 91
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 76

   47 addop: OPER_ADD •

    $default  reduce using rule 47 (addop)


State 77

   48 addop: OPER_SUB •

    $default  reduce using rule 48 (addop)


State 78

   46 addExpr: addExpr addop • term

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    var           go to state 63
    term          go to state 92
    factor        go to state 54
    funcCallExpr  go to state 55


State 79

   51 mulop: OPER_MUL •

    $default  reduce using rule 51 (mulop)


State 80

   52 mulop: OPER_DIV •

    $default  reduce using rule 52 (mulop)


State 81

   50 term: term mulop • factor

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    var           go to state 63
    factor        go to state 93
    funcCallExpr  go to state 55


State 82

   38 var: ID LSQ_BRKT addExpr • RSQ_BRKT
   46 addExpr: addExpr • addop term

    OPER_ADD  shift, and go to state 76
    OPER_SUB  shift, and go to state 77
    RSQ_BRKT  shift, and go to state 94

    addop  go to state 78


State 83

   60 funcCallExpr: ID LPAREN RPAREN •

    $default  reduce using rule 60 (funcCallExpr)


State 84

   36 expression: expression • relop addExpr
   61 argList: expression •

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73

    $default  reduce using rule 61 (argList)

    relop  go to state 74


State 85

   59 funcCallExpr: ID LPAREN argList • RPAREN
   62 argList: argList • COMMA expression

    RPAREN  shift, and go to state 95
    COMMA   shift, and go to state 96


State 86

   30 condStmt: KWD_IF LPAREN expression • RPAREN statement
   31         | KWD_IF LPAREN expression • RPAREN statement KWD_ELSE statement
   36 expression: expression • relop addExpr

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73
    RPAREN    shift, and go to state 97

    relop  go to state 74


State 87

   32 loopStmt: KWD_WHILE LPAREN expression • RPAREN statement
   36 expression: expression • relop addExpr

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73
    RPAREN    shift, and go to state 98

    relop  go to state 74


State 88

   27 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT •

    $default  reduce using rule 27 (compoundStmt)


State 89

   53 factor: LPAREN expression RPAREN •

    $default  reduce using rule 53 (factor)


State 90

   36 expression: expression relop addExpr •
   46 addExpr: addExpr • addop term

    OPER_ADD  shift, and go to state 76
    OPER_SUB  shift, and go to state 77

    $default  reduce using rule 36 (expression)

    addop  go to state 78


State 91

   28 assignStmt: var OPER_ASGN expression •
   36 expression: expression • relop addExpr

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73

    $default  reduce using rule 28 (assignStmt)

    relop  go to state 74


State 92

   46 addExpr: addExpr addop term •
   50 term: term • mulop factor

    OPER_MUL  shift, and go to state 79
    OPER_DIV  shift, and go to state 80

    $default  reduce using rule 46 (addExpr)

    mulop  go to state 81


State 93

   50 term: term mulop factor •

    $default  reduce using rule 50 (term)


State 94

   38 var: ID LSQ_BRKT addExpr RSQ_BRKT •

    $default  reduce using rule 38 (var)


State 95

   59 funcCallExpr: ID LPAREN argList RPAREN •

    $default  reduce using rule 59 (funcCallExpr)


State 96

   62 argList: argList COMMA • expression

    ID         shift, and go to state 34
    INTCONST   shift, and go to state 35
    CHARCONST  shift, and go to state 36
    STRCONST   shift, and go to state 37
    LPAREN     shift, and go to state 42

    expression    go to state 99
    var           go to state 63
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 97

   30 condStmt: KWD_IF LPAREN expression RPAREN • statement
   31         | KWD_IF LPAREN expression RPAREN • statement KWD_ELSE statement

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    statement     go to state 100
    compoundStmt  go to state 45
    assignStmt    go to state 46
    condStmt      go to state 47
    loopStmt      go to state 48
    returnStmt    go to state 49
    expression    go to state 50
    var           go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 98

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN • statement

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    statement     go to state 101
    compoundStmt  go to state 45
    assignStmt    go to state 46
    condStmt      go to state 47
    loopStmt      go to state 48
    returnStmt    go to state 49
    expression    go to state 50
    var           go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 99

   36 expression: expression • relop addExpr
   62 argList: argList COMMA expression •

    OPER_LT   shift, and go to state 68
    OPER_GT   shift, and go to state 69
    OPER_GTE  shift, and go to state 70
    OPER_LTE  shift, and go to state 71
    OPER_EQ   shift, and go to state 72
    OPER_NEQ  shift, and go to state 73

    $default  reduce using rule 62 (argList)

    relop  go to state 74


State 100

   30 condStmt: KWD_IF LPAREN expression RPAREN statement •
   31         | KWD_IF LPAREN expression RPAREN statement • KWD_ELSE statement

    KWD_ELSE  shift, and go to state 102

    KWD_ELSE  [reduce using rule 30 (condStmt)]
    $default  reduce using rule 30 (condStmt)


State 101

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 32 (loopStmt)


State 102

   31 condStmt: KWD_IF LPAREN expression RPAREN statement KWD_ELSE • statement

    ID          shift, and go to state 34
    INTCONST    shift, and go to state 35
    CHARCONST   shift, and go to state 36
    STRCONST    shift, and go to state 37
    KWD_IF      shift, and go to state 38
    KWD_WHILE   shift, and go to state 39
    KWD_RETURN  shift, and go to state 40
    LCRLY_BRKT  shift, and go to state 41
    LPAREN      shift, and go to state 42

    statement     go to state 103
    compoundStmt  go to state 45
    assignStmt    go to state 46
    condStmt      go to state 47
    loopStmt      go to state 48
    returnStmt    go to state 49
    expression    go to state 50
    var           go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    funcCallExpr  go to state 55


State 103

   31 condStmt: KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement •

    $default  reduce using rule 31 (condStmt)
